# VenWm

./: CMakeLists.txt  launch.sh
src/: log.c  log.h  main.c  util.h  wm.c  wm.h
